--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,15 +11,18 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-icons": "^1.3.2",
+    "@radix-ui/react-slot": "^1.1.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
+    "lucide-react": "^0.460.0",
     "next": "^15.0.0",
+    "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "clsx": "^2.1.0",
     "tailwind-merge": "^2.5.0",
-    "tailwindcss-animate": "^1.0.7",
-    "class-variance-authority": "^0.7.0",
-    "lucide-react": "^0.460.0",
-    "@radix-ui/react-slot": "^1.1.0"
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.6.0",
