--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.65.0",
     "tailwind-merge": "^2.5.0",
+    "tailwind-scrollbar-hide": "^4.0.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^4.1.12"
   },
